# spbau

./: .gitignore  README.md
algorithms/contests/01_lca_rmq_ctrees/src/: CMakeLists.txt  a_ancestor.cpp  c_magic.cpp  d_artist.cpp  e_gooddays.cpp  g_swapper.cpp  h_keyinsert.cpp
algorithms/hw01/: Gorbunov_hw01.tex
algorithms/hw02/: Gorbunov_hw02.tex
algorithms/hw03/: Gorbunov_hw03.tex  euler.py
algorithms/hw04/: Gorbunov_hw04.tex
algorithms/hw05/: Gorbunov_hw05.tex  env.tex
algorithms/hw09/: Gorbunov_hw09.tex
algorithms/hw12/: Gorbunov_hw12.tex
algorithms/hw13/: env.tex
algorithms/lec/: lec6.html  lec6.md
algs/contests_project/: CMakeLists.txt
algs/hw03/: env.tex
algs/hw04/: env.tex
algs/hw06/: Gorbunov_hw6.tex
algs/hw09/: Gorbunov_hw9.tex
algs/hw1/: Gorbunov_1.fdb_latexmk  Gorbunov_1.tex
algs/hw10/: Gorbunov_hw10.tex
algs/hw12/: Gorbunov_hw12.tex
algs/hw2/: Gorbunov_hw2.fdb_latexmk  Gorbunov_hw2.tex  env.tex
algs/hw3/: Gorbunov_hw3.tex  env.tex
algs/hw5/: Gorbunov_hw5.tex  env.tex
algs/hw7/: Gorbunov_hw7.tex  env.tex
algs/hw8/: Gorbunov_hw8.tex
algs/stepic/solutions/: CMakeLists.txt
algs/stepic/solutions/diskrete/: khypercube.cpp
algs/stepic/solutions/dynamics/: grincsubseq.cpp
algs/stepic/solutions/greedy/: huffman_decode.cpp  n_to_max_sum.cpp  point_cover.cpp  priority_queue.cpp  uniform_backpack.cpp
algs/stepic/solutions/sortsearch/: binsearch.cpp  inversioncount.cpp
commons/test_project/: CMakeLists.txt  euler.cpp  main.cpp
compilers/sem1/: comp.ml
concurrent/notes/: lec1_2.md  lec3_1.md  lec4_1.md
cpp/: lec_5_notes.md
cpp/control_2_1/: Makefile
cpp/control_3/: CMakeLists.txt
cpp/control_4/: Makefile
cpp/ha1_linked_ptr/: Makefile
cpp/ha2_lazy_string/: Makefile
cpp/ha3_bind/: CMakeLists.txt
cpp/hw1_huffman/: CMakeLists.txt  FixedCapacityArray.h  Makefile  bit_io.cpp  bit_io.h  common_defs.h  huffman.cpp  huffman.h  main.cpp
cpp/hw2_lint/: BigInt.h  CMakeLists.txt  Makefile  check.h  lint.cpp  lint.h  main.cpp
cpp/interesting/: compile_time_fac_1.cpp  compile_time_fac_2.cpp  compile_time_fac_3.cpp  static_assert.cpp  static_assert_2.cpp
cpp/notes/: lec_5_notes.md  my_notes.md
cpp/sem1/: hello.h  istream.cpp  main.cpp
cpp/seminar_08_strings/: notes.md
diskr/: permutations  permutations.cpp
diskr/graphs/: artic_points_search.cpp
english/tenses/: future_simple.tex  past_continuous.tex  present_continuous.tex  present_perfect.tex  present_simple.tex  tenses.tex  title.tex
exam/algos/: algos_questions.tex  env.tex
fall_term_15-16/: README.md
fall_term_15-16/cpp/: notes.md
fall_term_15-16/funp/hw6/echo-server/: echo-server.cabal
fall_term_15-16/nir/: slides_text_au_15.md
fall_term_16-17/infret/: info.md
flang/hw01/: env.tex  flangs_Gorbunov_hw01.tex
flang/hw02/: flangs_Gorbunov_hw02.tex
flang/hw04/: env.tex
flang/hw05/: env.tex
flang/reg_to_fsa/: num_dfa.tex  regular_to_fsa_Gorbunov.tex
funp/Tasks/: EditDistance.hs  KnapsackInfinite.hs  LRU.hs  Lenta.hs  Stairs.hs
funp/cw1/: cw1.cabal
funp/cw2/: cw2.cabal  x.txt
funp/hw1/: Gorbunov_hw1.tex  env.tex
funp/hw2/: Gorbunov_hw2.hs  Gorbunov_hw2.tex
funp/hw4/: Folds.hs  Main.hs  Read.hs
funp/hw5/: hw5.cabal
funp/hw5/src/: Main.hs  Parser.hs
funp/hw6/guess/: guess.cabal
funp/hw6/guess/app/: Main.hs
funp/lec/: fp04.hs  fp05.hs
infret/hw2/: env.tex
infret/hw3/: gorbunov_ir_hw03.tex  playground.ipynb
java/notes/: jmm_test_try.md  lec06.html  lec1.md  lec_03_exceptions.md  lec_04_collectios.md  lec_04_collextions.md  lec_jmm.md  test01_solutions.html  test02_solutions.html  test03_solutions.md
jb_task/dfdx/: pom.xml
linux/cw1/: 1.sh  11.sh  14.sh  2.sh  3.sh  4.sh  5.sh  6.sh  7.sh  9.sh  cit.txt  input.txt  x.txt
linux/hw1/: 10.sh  10_better.sh  2.sh  4.sh  9.sh  copy_exe.sh  rnd.txt
linux/hw2/2/: 2.sh
linux/hwlec1/: 2.sh  3.sh  3sed  4.sh  4.sh.save  5.sh  6.sh  test4.cpp  test4.cpp.save
linux/lechw1/: 1.sh  t3table.html  test3.csv  test6.cpp
linux/notes/: cpu_context.md
linux/sem1/: tester.sh
linux/sigterm_check/: Makefile
linux/tmp/: 9.sh
logic/hw11/: Gorbunov_mlogic_hw11.tex
logic/hw2/: cb.hs  tasks02.tex
ml/: course.md  lec3.md
ml/exam/: q1.ipynb
ml/hw02/: prepare_data.ipynb
ml/hw03/: hw3_genetic.ipynb
ml/hw04/: README.md  grid_world.ipynb
ml/hw1/: mnist_keras.ipynb
ml/hw2/: what.md
nir/: bi_notes.md  bi_questions.md  gb_notes.md  gb_questions.md  notes.md  questions.md
nir/lang/: lang.tex  settings.tex
nir/slides/: env.tex  gorbunov_au_slides_15.tex  gorbunov_gemlbee_lang.tex  packages.tex
os/hw1/: README.md
os/hw3/: Makefile
os/hw4/: Makefile
os/hw5/: hw5.md
python/: tmp.py
scala/hw1/: build.sbt
scala/sem1/: build.sbt
spring_term_16/algorithms/contests/01_lca_rmq_ctrees/test/: CMakeLists.txt  tests.cpp
spring_term_16/algorithms/contests/02_lp_nt_flow/: CMakeLists.txt
spring_term_16/algorithms/contests/02_lp_nt_flow/src/: b_inverse.cpp  c_pairs.cpp  e_taxi.cpp  h_min_cut.cpp  i_molecule.cpp
spring_term_16/nir/: bi_questions.md  gb_questions.md
statistics/hw1/: hw1_linear_regression.Rmd  hw1_linear_regression.html
vm/notes/: notes1.md
(+1301 files in other folders)
