name:                hw5
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/hw5#readme
license:             BSD3
license-file:        LICENSE
author:              Egor Gorbunov
maintainer:          egor-mailbox@ya.ru
copyright:           2015 Egor Gorbunov
category:            Study
build-type:          Simple
cabal-version:       >=1.10

executable hw5
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Combinators,
                       Parser
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       containers == 0.5.*,
                       random
